[project]
name = "hueify_log_trace"
version = "0.0.1"
description = "Colored logging and tracebacks."
readme = "README.md"
authors = [{ name = "Suguru Yamamoto", email = "sgryjp@gmail.com" }]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
